@@ -1,68 +1,70 @@
 package gov.nysenate.openleg.api.admin;
 
-import com.google.common.collect.ImmutableMap;
+import gov.nysenate.openleg.api.BaseCtrl;
+import gov.nysenate.openleg.api.InvalidRequestParamEx;
+import gov.nysenate.openleg.api.ListView;
+import gov.nysenate.openleg.api.auth.AdminUserView;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.SimpleResponse;
 import gov.nysenate.openleg.api.response.ViewObjectResponse;
 import gov.nysenate.openleg.api.response.error.ErrorCode;
 import gov.nysenate.openleg.api.response.error.ErrorResponse;
 import gov.nysenate.openleg.api.response.error.ViewObjectErrorResponse;
-import gov.nysenate.openleg.api.ListView;
-import gov.nysenate.openleg.api.auth.AdminUserView;
-import gov.nysenate.openleg.config.Environment;
-import gov.nysenate.openleg.api.BaseCtrl;
-import gov.nysenate.openleg.api.InvalidRequestParamEx;
 import gov.nysenate.openleg.auth.admin.AdminUser;
 import gov.nysenate.openleg.auth.admin.AdminUserService;
 import gov.nysenate.openleg.auth.exception.InvalidUsernameException;
-import gov.nysenate.openleg.notifications.mail.SendMailService;
 import gov.nysenate.openleg.common.util.RandomUtils;
+import gov.nysenate.openleg.config.OpenLegEnvironment;
+import gov.nysenate.openleg.notifications.mail.SendMailService;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.text.StringSubstitutor;
 import org.apache.shiro.SecurityUtils;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.apache.shiro.authz.annotation.RequiresUser;
 import org.mindrot.jbcrypt.BCrypt;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.stream.Collectors;
+import java.io.Serial;
+import java.util.Map;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_ADMIN_API_PATH;
 
 @RestController
 @RequestMapping(value = BASE_ADMIN_API_PATH + "/accounts")
-public class AdminAccountCtrl extends BaseCtrl
-{
-    private static final Logger logger = LoggerFactory.getLogger(AdminAccountCtrl.class);
-
-    @Autowired
-    private AdminUserService adminUserService;
-
-    @Autowired
-    private SendMailService sendMailService;
-
-    @Autowired
-    Environment environment;
-
+public class AdminAccountCtrl extends BaseCtrl {
     private static final String registrationEmailSubject = "OpenLegislation admin registration";
-
     private static final String registrationEmailTemplate =
-            "Hello,\n\n" +
-            "\tYou are receiving this email because you have been registered as an administrative user of OpenLegislation.  " +
-            "Your login credentials are as follows:\n\n\tusername: ${username}\n\tpassword: ${password}\n\n" +
-            "Log in at ${base_url}/admin/account to access your account";
+            """
+                    Hello,
+
+                    \tYou are receiving this email because you have been registered as an administrative user of OpenLegislation. Your login credentials are as follows:
+
+                    \tusername: ${username}
+                    \tpassword: ${password}
+
+                    Log in at ${base_url}/admin/account to access your account""";
 
     private static final int newPassLength = 8;
     private static final int minPassLength = 5;
 
+    private final AdminUserService adminUserService;
+    private final SendMailService sendMailService;
+    private final OpenLegEnvironment environment;
+
+    @Autowired
+    public AdminAccountCtrl(AdminUserService adminUserService, SendMailService sendMailService,
+                           OpenLegEnvironment environment) {
+        this.adminUserService = adminUserService;
+        this.sendMailService = sendMailService;
+        this.environment = environment;
+    }
+
     @RequiresUser
-    @RequestMapping(value = "/logout", method = RequestMethod.GET)
+    @GetMapping(value = "/logout")
     @ResponseStatus(value = HttpStatus.UNAUTHORIZED)
     public BaseResponse logout() {
         SecurityUtils.getSubject().logout();
@@ -70,16 +72,14 @@ public class AdminAccountCtrl extends BaseCtrl
     }
 
     @RequiresPermissions("admin:account:view")
-    @RequestMapping(value = "", method = RequestMethod.GET)
+    @GetMapping(value = "")
     public BaseResponse getAdminUsers() {
         return new ViewObjectResponse<>(ListView.of(
-                adminUserService.getAdminUsers().stream()
-                        .map(AdminUserView::new)
-                        .collect(Collectors.toList())));
+                adminUserService.getAdminUsers().stream().map(AdminUserView::new).toList()));
     }
 
     @RequiresPermissions("admin:account:view")
-    @RequestMapping(value = "/{username:.+}", method = RequestMethod.GET)
+    @GetMapping(value = "/{username:.+}")
     public BaseResponse getAdminUser(@PathVariable String username) {
         if (StringUtils.isBlank(username)) {
             return getAdminUsers();
@@ -105,10 +105,9 @@ public class AdminAccountCtrl extends BaseCtrl
      *  Expected Output: successful admin-registered response if the user was created, ErrorResponse otherwise
      */
     @RequiresPermissions("admin:account:modify")
-    @RequestMapping(value = "/{username:.+}", method = RequestMethod.POST)
+    @PostMapping(value = "/{username:.+}")
     public Object createNewUser(@PathVariable String username,
                                 @RequestParam(defaultValue = "false") boolean master) {
-
         if (adminUserService.adminInDb(username)) {
             return new ResponseEntity<>(
                     new ViewObjectErrorResponse(ErrorCode.USER_ALREADY_EXISTS, username), HttpStatus.CONFLICT);
@@ -120,10 +119,9 @@ public class AdminAccountCtrl extends BaseCtrl
         } catch (InvalidUsernameException ex) {
             throw new InvalidRequestParamEx(username, "username", "String", ex.getProperFormat());
         }
-
         sendNewUserEmail(username, password);
-
-        return new SimpleResponse(true, username + " has been successfully registered as an admin user", "admin-registered");
+        return new SimpleResponse(true, username + " has been successfully registered as an admin user",
+                "admin-registered");
     }
 
     /**
@@ -139,20 +137,18 @@ public class AdminAccountCtrl extends BaseCtrl
      *  Expected Output: successful admin-deleted if a user was removed, ErrorResponse otherwise
      */
     @RequiresPermissions("admin:account:modify")
-    @RequestMapping(value = "/{username:.+}", method = RequestMethod.DELETE)
+    @DeleteMapping(value = "/{username:.+}")
     public Object removeUser(@PathVariable String username) {
         if (!adminUserService.adminInDb(username)) {
             throw new UserNotFoundException(username);
         }
-
         if (environment.getDefaultAdminName().equals(username)) {
             return new ResponseEntity<>(
                     new ViewObjectErrorResponse(ErrorCode.CANNOT_DELETE_ADMIN, username), HttpStatus.FORBIDDEN);
         }
-
         adminUserService.deleteAdmin(username);
-
-        return new SimpleResponse(true, "The admin user " + username + " has been successfully removed", "admin-deleted");
+        return new SimpleResponse(true, "The admin user " + username + " has been successfully removed",
+                "admin-deleted");
     }
 
     /**
@@ -165,19 +161,20 @@ public class AdminAccountCtrl extends BaseCtrl
      *
      *  Request params: password (string) - The new password
      *
-     *  Expected Output: successful pass-changed response if the password was changed, ErrorResponse otherwise
+     *  Expected Output: successful pass-changed response if the password was changed,
+     *  ErrorResponse otherwise.
      */
     @RequiresPermissions("admin")
-    @RequestMapping(value = "/passchange", method = RequestMethod.POST)
-    public Object changePassword(@RequestParam(required = true) String password) {
-        String username = getSubjectUsername();
+    @PostMapping(value = "/passchange")
+    public Object changePassword(@RequestParam() String password) {
+        String username = SecurityUtils.getSubject().getPrincipal().toString();
         AdminUser user = adminUserService.getAdminUser(username);
         if (BCrypt.checkpw(password, user.getPassword())) {
             return new ResponseEntity<>(
                     new ErrorResponse(ErrorCode.SAME_PASSWORD), HttpStatus.BAD_REQUEST);
         }
         if (password.length() < minPassLength) {
-            throw new InvalidRequestParamEx(password.replaceAll(".", "*"), "password", "String",
+            throw new InvalidRequestParamEx("*".repeat(password.length()), "password", "String",
                     "Password must contain at least " + minPassLength + " characters");
         }
         user.setPassword(password);
@@ -194,17 +191,6 @@ public class AdminAccountCtrl extends BaseCtrl
     }
 
     /**
-     * --- Internal Methods ---
-     */
-
-    /**
-     * @return The username of the current subject
-     */
-    private String getSubjectUsername() {
-        return SecurityUtils.getSubject().getPrincipal().toString();
-    }
-
-    /**
      * Sends an email to a new user notifying them of their registration
      * @param username The username/email address of the new user
      * @param password the password of the new user
@@ -212,14 +198,14 @@ public class AdminAccountCtrl extends BaseCtrl
     @Async
     protected void sendNewUserEmail(String username, String password) {
         String message = StringSubstitutor.replace(registrationEmailTemplate,
-                ImmutableMap.of("username", username, "password", password, "base_url", environment.getUrl()));
+                Map.of("username", username, "password", password, "base_url",environment.getUrl()));
         sendMailService.sendMessage(username, registrationEmailSubject, message);
     }
 
-    private class UserException extends RuntimeException
-    {
+    private static class UserException extends RuntimeException {
+        @Serial
         private static final long serialVersionUID = -6422565299854256546L;
-        private String username;
+        private final String username;
 
         public UserException(String message, String username) {
             super(message);
@@ -231,7 +217,8 @@ public class AdminAccountCtrl extends BaseCtrl
         }
     }
 
-    private class UserNotFoundException extends UserException {
+    private static class UserNotFoundException extends UserException {
+        @Serial
         private static final long serialVersionUID = 3276041543957882445L;
         public UserNotFoundException(String username) {
             super("User " + username + " was not found!", username);
