@@ -1,5 +1,6 @@
 package gov.nysenate.openleg.api.legislation.agenda;
 
+import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.api.legislation.agenda.view.*;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.DateRangeListViewResponse;
@@ -7,43 +8,44 @@ import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.api.response.ViewObjectResponse;
 import gov.nysenate.openleg.api.response.error.ErrorCode;
 import gov.nysenate.openleg.api.response.error.ViewObjectErrorResponse;
-import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.common.dao.SortOrder;
 import gov.nysenate.openleg.legislation.agenda.Agenda;
 import gov.nysenate.openleg.legislation.agenda.AgendaId;
 import gov.nysenate.openleg.legislation.agenda.AgendaNotFoundEx;
-import gov.nysenate.openleg.legislation.agenda.CommitteeAgendaId;
+import gov.nysenate.openleg.legislation.agenda.dao.AgendaDataService;
 import gov.nysenate.openleg.legislation.committee.Chamber;
 import gov.nysenate.openleg.legislation.committee.CommitteeId;
-import gov.nysenate.openleg.search.SearchException;
-import gov.nysenate.openleg.search.SearchResults;
-import gov.nysenate.openleg.legislation.agenda.dao.AgendaDataService;
-import gov.nysenate.openleg.search.agenda.AgendaSearchService;
-import gov.nysenate.openleg.legislation.bill.dao.service.BillDataService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.WebRequest;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.SortedSet;
+import java.util.TreeSet;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 
 @RestController
 @RequestMapping(value = BASE_API_PATH + "/agendas", method = RequestMethod.GET)
-public class AgendaGetCtrl extends BaseCtrl
-{
-    private static final Logger logger = LoggerFactory.getLogger(AgendaGetCtrl.class);
+public class AgendaGetCtrl extends BaseCtrl {
+    private static final Comparator<AgendaMeetingDetailView> amdvComparator =
+            Comparator.comparing((AgendaMeetingDetailView o) -> o.getMeeting().meetingDateTime())
+                    // We only need to sort on the meetingDateTime, while ensuring two committees
+                    // are never treated as equal aren't treated as equal.
+                    .thenComparingInt(Object::hashCode);
+    private final AgendaDataService agendaData;
+    private final AgendaBillUtils agendaBillUtils;
 
-    @Autowired private AgendaDataService agendaData;
-    @Autowired private AgendaSearchService agendaSearch;
-    @Autowired private BillDataService billData;
+    @Autowired
+    public AgendaGetCtrl(AgendaDataService agendaData, AgendaBillUtils agendaBillUtils) {
+        this.agendaData = agendaData;
+        this.agendaBillUtils = agendaBillUtils;
+    }
 
     /**
      * Agenda List Retrieval API
@@ -52,12 +54,14 @@ public class AgendaGetCtrl extends BaseCtrl
      * Returns a list of agenda ids in ascending order that occur in the given 'year'.
      */
     @RequestMapping(value = "/{year:\\d{4}}")
-    public BaseResponse getAgendas(@PathVariable int year) {
+    public BaseResponse getAgendas(@PathVariable int year, WebRequest webRequest) {
+        LimitOffset limOff = getLimitOffset(webRequest, 25);
         List<AgendaId> agendaIds = agendaData.getAgendaIds(year, SortOrder.ASC);
+        agendaIds = LimitOffset.limitList(agendaIds, limOff);
         return ListViewResponse.of(
                 agendaIds.stream()
                         .map(aid -> new AgendaSummaryView(agendaData.getAgenda(aid)))
-                        .collect(Collectors.toList()), agendaIds.size(), LimitOffset.ALL);
+                        .toList(), agendaIds.size(), limOff);
     }
 
     /**
@@ -70,10 +74,10 @@ public class AgendaGetCtrl extends BaseCtrl
      * where 'year' is the calendar year of the agenda and agendaNo is the number that identifies
      * the agenda. This response will contain data for committee agendas.
      */
-    @RequestMapping(value = "/{year:[\\d]{4}}/{agendaNo}")
+    @RequestMapping(value = "/{year:\\d{4}}/{agendaNo}")
     public BaseResponse getAgenda(@PathVariable int year, @PathVariable int agendaNo) {
         Agenda agenda = agendaData.getAgenda(new AgendaId(agendaNo, year));
-        return new ViewObjectResponse<>(new AgendaView(agenda, billData));
+        return new ViewObjectResponse<>(new AgendaView(agenda, agendaBillUtils.getBillInfoMap(agenda, null)));
     }
 
     /**
@@ -89,7 +93,7 @@ public class AgendaGetCtrl extends BaseCtrl
     public ViewObjectResponse<AgendaView> getAgenda(@PathVariable String weekOf) {
         LocalDate weekOfDate = parseISODate(weekOf, "weekOf");
         Agenda agenda = agendaData.getAgenda(weekOfDate);
-        return new ViewObjectResponse<>(new AgendaView(agenda, billData));
+        return new ViewObjectResponse<>(new AgendaView(agenda, agendaBillUtils.getBillInfoMap(agenda, null)));
     }
 
     /**
@@ -102,12 +106,12 @@ public class AgendaGetCtrl extends BaseCtrl
      * where year and agendaNo are the same as {@link #getAgenda(int, int)} and 'committeeName' refers to the
      * name of the senate committee.
      */
-    @RequestMapping(value = "/{year:[\\d]{4}}/{agendaNo}/{commName}")
+    @RequestMapping(value = "/{year:\\d{4}}/{agendaNo}/{commName}")
     public BaseResponse getAgenda(@PathVariable int year, @PathVariable int agendaNo, @PathVariable String commName) {
         Agenda agenda = agendaData.getAgenda(new AgendaId(agendaNo, year));
         CommitteeId committeeId = new CommitteeId(Chamber.SENATE, commName);
         if (agenda.hasCommittee(committeeId)) {
-            return new ViewObjectResponse<>(new AgendaCommFlatView(agenda, committeeId, billData));
+            return new ViewObjectResponse<>(new AgendaCommFlatView(agenda, committeeId, agendaBillUtils.getBillInfoMap(agenda, committeeId)));
         }
         else {
             return new ViewObjectErrorResponse(
@@ -120,30 +124,24 @@ public class AgendaGetCtrl extends BaseCtrl
      * ----------------------
      *
      * Retrieve a list of committee meetings between from and to date/time, ordered by earliest first.
-     * (GET) /api/3/agendas/meetings/{from datetime}/{to datetime}
+     * (GET) /api/3/agendas/meetings/{from}/{to}
      */
     @RequestMapping(value = "/meetings/{from}/{to}")
-    public BaseResponse getAgendaMeetings(@PathVariable String from, @PathVariable String to) throws SearchException {
+    public BaseResponse getAgendaMeetings(@PathVariable String from, @PathVariable String to,
+                                          WebRequest webRequest) {
+        LimitOffset limOff = getLimitOffset(webRequest, 0);
         LocalDateTime fromDateTime = parseISODateTime(from, "from");
         LocalDateTime toDateTime = parseISODateTime(to, "to");
-        String meetingQuery = String.format("\\*.meetingDateTime:[%s TO %s]", fromDateTime.toString(), toDateTime.toString());
-        String sort = "committee.addenda.items.meeting.meetingDateTime:ASC";
-        SearchResults<CommitteeAgendaId> results = agendaSearch.searchCommitteeAgendas(meetingQuery, sort, LimitOffset.THOUSAND);
-        List<AgendaMeetingDetailView> meetingViews = new ArrayList<>();
-        results.getResults().stream().forEach(r -> {
-            // Create a flat listing of detailed meeting views.
-            CommitteeAgendaId commAgendaId = r.getResult();
-            agendaData.getAgenda(commAgendaId.getAgendaId())
-                    .getAgendaInfoAddenda().values().stream()
-                    .forEach(addn -> {
-                        if (addn.getCommitteeInfoMap().containsKey(commAgendaId.getCommitteeId())) {
-                            meetingViews.add(new AgendaMeetingDetailView(
-                                commAgendaId, addn.getCommittee(commAgendaId.getCommitteeId()), addn.getId(), addn.getWeekOf()));
-                        }
-                    });
-        });
-        return DateRangeListViewResponse.of(
-                meetingViews, getClosedRange(fromDateTime, toDateTime, "from", "to"), meetingViews.size(), LimitOffset.ALL);
+        WeekOfAgendaInfoMap agendaInfoMap = agendaData.getWeekOfMap(fromDateTime, toDateTime);
+        SortedSet<AgendaMeetingDetailView> sortedViewSet = new TreeSet<>(amdvComparator);
+        for (var date : agendaInfoMap.keySet()) {
+            for (var comm : agendaInfoMap.get(date)) {
+                sortedViewSet.add(new AgendaMeetingDetailView(comm, comm.getAddendum().toString(), date));
+            }
+        }
+        return DateRangeListViewResponse.of(sortedViewSet.stream().toList(),
+                getClosedRange(fromDateTime, toDateTime, "from", "to"),
+                sortedViewSet.size(), limOff);
     }
 
     /** --- Exception Handlers --- */
@@ -151,6 +149,7 @@ public class AgendaGetCtrl extends BaseCtrl
     @ExceptionHandler(AgendaNotFoundEx.class)
     @ResponseStatus(value = HttpStatus.NOT_FOUND)
     public ViewObjectErrorResponse agendaNotFoundHandler(AgendaNotFoundEx ex) {
-        return new ViewObjectErrorResponse(ErrorCode.AGENDA_NOT_FOUND, new AgendaIdView(ex.getAgendaId()));
+        return new ViewObjectErrorResponse(ErrorCode.AGENDA_NOT_FOUND,
+                new AgendaIdView(ex.getAgendaId()));
     }
 }
