@@ -1,42 +1,39 @@
 package gov.nysenate.openleg.api.legislation.calendar;
 
+import gov.nysenate.openleg.api.BaseCtrl;
+import gov.nysenate.openleg.api.InvalidRequestParamEx;
 import gov.nysenate.openleg.api.legislation.calendar.view.CalendarViewFactory;
 import gov.nysenate.openleg.api.legislation.calendar.view.SimpleCalendarView;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.api.search.view.SearchResultView;
-import gov.nysenate.openleg.api.BaseCtrl;
-import gov.nysenate.openleg.api.InvalidRequestParamEx;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.legislation.calendar.CalendarId;
+import gov.nysenate.openleg.legislation.calendar.dao.CalendarDataService;
 import gov.nysenate.openleg.search.SearchException;
 import gov.nysenate.openleg.search.SearchResults;
-import gov.nysenate.openleg.legislation.calendar.dao.CalendarDataService;
 import gov.nysenate.openleg.search.calendar.CalendarSearchService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.WebRequest;
-
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 
 @RestController
 @RequestMapping(value = BASE_API_PATH + "/calendars", method = RequestMethod.GET)
-public class CalendarSearchCtrl extends BaseCtrl{
-
-    private static final Logger logger = LoggerFactory.getLogger(CalendarSearchCtrl.class);
-
-    @Autowired
-    private CalendarSearchService calendarSearchService;
+public class CalendarSearchCtrl extends BaseCtrl {
+    private final CalendarSearchService calendarSearchService;
+    private final CalendarDataService calendarDataService;
+    private final CalendarViewFactory calendarViewFactory;
 
     @Autowired
-    private CalendarDataService calendarDataService;
-
-    @Autowired
-    private CalendarViewFactory calendarViewFactory;
+    public CalendarSearchCtrl(CalendarSearchService calendarSearchService,
+                              CalendarDataService calendarDataService,
+                              CalendarViewFactory calendarViewFactory) {
+        this.calendarSearchService = calendarSearchService;
+        this.calendarDataService = calendarDataService;
+        this.calendarViewFactory = calendarViewFactory;
+    }
 
     /** --- Request Handlers --- */
 
@@ -52,7 +49,7 @@ public class CalendarSearchCtrl extends BaseCtrl{
      *                          offset - Start results from offset (default 1)
      */
     @RequestMapping(value = "/search")
-    public BaseResponse searchCalendars(@RequestParam(required = true) String term,
+    public BaseResponse searchCalendars(@RequestParam String term,
                                         @RequestParam(defaultValue = "") String sort,
                                         @RequestParam(defaultValue = "false") boolean detail,
                                         WebRequest webRequest) throws SearchException, InvalidRequestParamEx {
@@ -73,7 +70,7 @@ public class CalendarSearchCtrl extends BaseCtrl{
      */
     @RequestMapping(value = "/{year:\\d{4}}/search")
     public BaseResponse searchCalendarsOfYear(@PathVariable Integer year,
-                                              @RequestParam(required = true) String term,
+                                              @RequestParam String term,
                                               @RequestParam(defaultValue = "") String sort,
                                               @RequestParam(defaultValue = "false") boolean detail,
                                       WebRequest webRequest) throws SearchException, InvalidRequestParamEx {
@@ -87,14 +84,6 @@ public class CalendarSearchCtrl extends BaseCtrl{
 
     /**
      * Performs a calendar search based on the input parameters and returns a search response
-     *
-     * @param term
-     * @param sort
-     * @param limitOffset
-     * @param year
-     * @return
-     * @throws SearchException
-     * @throws InvalidRequestParamEx
      */
     private BaseResponse getCalendarSearchResponse(String term, String sort, LimitOffset limitOffset, Integer year, boolean detail)
             throws SearchException, InvalidRequestParamEx {
@@ -111,13 +100,10 @@ public class CalendarSearchCtrl extends BaseCtrl{
      */
     private BaseResponse getCalendarSearchResultResponse(SearchResults<CalendarId> results, boolean detail) {
         return ListViewResponse.of(
-                results.getResults().stream()
-                        .map(result -> new SearchResultView((detail)
-                                ? calendarViewFactory.getCalendarView(
-                                calendarDataService.getCalendar(result.getResult()))
-                                : new SimpleCalendarView(calendarDataService.getCalendar(result.getResult())),
-                                result.getRank()))
-                        .collect(Collectors.toList()),
-                results.getTotalResults(), results.getLimitOffset() );
+                results.resultList().stream()
+                        .map(result -> new SearchResultView(detail ? calendarViewFactory.getCalendarView(calendarDataService.getCalendar(result.result()))
+                                : new SimpleCalendarView(calendarDataService.getCalendar(result.result())),
+                                result.rank())).toList(),
+                results.totalResults(), results.limitOffset() );
     }
 }
