@@ -1,14 +1,14 @@
 package gov.nysenate.openleg.api.legislation.member;
 
+import gov.nysenate.openleg.api.BaseCtrl;
+import gov.nysenate.openleg.api.ViewObject;
+import gov.nysenate.openleg.api.legislation.member.view.FullMemberView;
+import gov.nysenate.openleg.api.legislation.member.view.SessionMemberView;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.api.response.ViewObjectResponse;
 import gov.nysenate.openleg.api.response.error.ErrorCode;
 import gov.nysenate.openleg.api.response.error.ErrorResponse;
-import gov.nysenate.openleg.api.ViewObject;
-import gov.nysenate.openleg.api.legislation.member.view.FullMemberView;
-import gov.nysenate.openleg.api.legislation.member.view.SessionMemberView;
-import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.legislation.SessionYear;
 import gov.nysenate.openleg.legislation.committee.Chamber;
@@ -23,17 +23,15 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.WebRequest;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
 @RestController
 @RequestMapping(value = BASE_API_PATH + "/members", method = RequestMethod.GET, produces = APPLICATION_JSON_VALUE)
-public class MemberGetCtrl extends BaseCtrl
-{
-    protected final MemberService memberData;
-    protected final MemberSearchService memberSearch;
+public class MemberGetCtrl extends BaseCtrl {
+    private final MemberService memberData;
+    private final MemberSearchService memberSearch;
 
     @Autowired
     public MemberGetCtrl(MemberService memberData, MemberSearchService memberSearch) {
@@ -90,8 +88,8 @@ public class MemberGetCtrl extends BaseCtrl
     @RequestMapping(value = "/{sessionYear:\\d{4}}/{memberId:\\d+}")
     public BaseResponse getMembersByYearAndId(@PathVariable int memberId,
                                          @PathVariable int sessionYear,
-                                         @RequestParam(defaultValue = "true") boolean full,
-                                         WebRequest request) throws MemberNotFoundEx {
+                                         @RequestParam(defaultValue = "true") boolean full)
+            throws MemberNotFoundEx {
         return new ViewObjectResponse<>(
                 (full) ? new FullMemberView(memberData.getFullMemberById(memberId))
                         : new SessionMemberView(memberData.getSessionMemberById(memberId, SessionYear.of(sessionYear)))
@@ -124,9 +122,10 @@ public class MemberGetCtrl extends BaseCtrl
     private BaseResponse getMemberResponse(boolean full, LimitOffset limOff, SearchResults<Integer> results) throws MemberNotFoundEx {
         List<ViewObject> memberList = results.getRawResults().stream()
                 .map(memberData::getFullMemberById)
-                .map(member -> full ? new FullMemberView(member) : new SessionMemberView(member.getLatestSessionMember().get()))
-                .collect(Collectors.toList());
-        return ListViewResponse.of(memberList, results.getTotalResults(), limOff);
+                .map(member -> full ? new FullMemberView(member) :
+                        new SessionMemberView(member.getLatestSessionMember().get()))
+                .toList();
+        return ListViewResponse.of(memberList, results.totalResults(), limOff);
     }
 
     @ExceptionHandler(MemberNotFoundEx.class)
