@@ -1,23 +1,21 @@
 package gov.nysenate.openleg.api.processor;
 
 import com.google.common.collect.Range;
+import gov.nysenate.openleg.api.BaseCtrl;
+import gov.nysenate.openleg.api.processor.view.SourceFileView;
+import gov.nysenate.openleg.api.processor.view.SourceIdView;
 import gov.nysenate.openleg.api.response.BaseResponse;
 import gov.nysenate.openleg.api.response.ListViewResponse;
 import gov.nysenate.openleg.api.response.ViewObjectResponse;
 import gov.nysenate.openleg.api.response.error.ErrorCode;
 import gov.nysenate.openleg.api.response.error.ErrorResponse;
-import gov.nysenate.openleg.api.processor.view.SourceFileView;
-import gov.nysenate.openleg.api.processor.view.SourceIdView;
-import gov.nysenate.openleg.api.BaseCtrl;
 import gov.nysenate.openleg.common.dao.LimitOffset;
 import gov.nysenate.openleg.common.dao.PaginatedList;
 import gov.nysenate.openleg.common.dao.SortOrder;
+import gov.nysenate.openleg.processors.bill.LegDataFragment;
+import gov.nysenate.openleg.processors.bill.SourceFile;
 import gov.nysenate.openleg.processors.sourcefile.SourceFileRefDao;
 import gov.nysenate.openleg.processors.sourcefile.sobi.LegDataFragmentDao;
-import gov.nysenate.openleg.processors.bill.SourceFile;
-import gov.nysenate.openleg.processors.bill.LegDataFragment;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.http.HttpStatus;
@@ -27,7 +25,6 @@ import org.springframework.web.context.request.WebRequest;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 
@@ -37,12 +34,14 @@ import static gov.nysenate.openleg.api.BaseCtrl.BASE_API_PATH;
 @RestController
 @RequestMapping(value = BASE_API_PATH + "/sources", method = RequestMethod.GET, produces = MediaType.APPLICATION_JSON_VALUE)
 public class SourceGetCtrl extends BaseCtrl {
-    private static final Logger logger = LoggerFactory.getLogger(SourceGetCtrl.class);
+    private final SourceFileRefDao sourceFileDao;
+    private final LegDataFragmentDao legDataFragmentDao;
 
     @Autowired
-    private SourceFileRefDao sourceFileDao;
-    @Autowired
-    private LegDataFragmentDao legDataFragmentDao;
+    public SourceGetCtrl(SourceFileRefDao sourceFileDao, LegDataFragmentDao legDataFragmentDao) {
+        this.sourceFileDao = sourceFileDao;
+        this.legDataFragmentDao = legDataFragmentDao;
+    }
 
     /**
      * SOBI File API
@@ -65,10 +64,10 @@ public class SourceGetCtrl extends BaseCtrl {
         Range<LocalDateTime> dateTimeRange = getClosedOpenRange(fromDateTime, toDateTime, "from", "to");
         PaginatedList<SourceFile> sourceFiles = sourceFileDao.getSourceFilesDuring(dateTimeRange, order, limOff);
         return ListViewResponse.of(
-                sourceFiles.getResults().stream()
+                sourceFiles.results().stream()
                         .map(sourceFile -> new SourceIdView(sourceFile.getSourceType().name(),
                                 sourceFile.getFileName(), sourceFile.getPublishedDateTime()))
-                        .collect(Collectors.toList()), sourceFiles.getTotal(), limOff);
+                        .toList(), sourceFiles.total(), limOff);
     }
 
     /**
@@ -86,8 +85,8 @@ public class SourceGetCtrl extends BaseCtrl {
         List<SourceFileView> fragList = legDataFragmentDao.getLegDataFragments(sourceFileName, SortOrder.ASC).stream()
                 .map(sf -> new SourceFileView(sf.getType().name(), sf.getFragmentId(),
                         sf.getPublishedDateTime(), sf.getText()))
-                .collect(Collectors.toList());
-        return ListViewResponse.of(fragList, fragList.size(), LimitOffset.ALL);
+                .toList();
+        return ListViewResponse.of(fragList, fragList.size(), limOff);
     }
 
     /**
