@@ -1,10 +1,10 @@
 package gov.nysenate.openleg.processors.scripts.member;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import gov.nysenate.openleg.legislation.member.FullMember;
 import gov.nysenate.openleg.common.script.BaseScript;
 import gov.nysenate.openleg.common.util.FileIOUtils;
 import gov.nysenate.openleg.common.util.HttpUtils;
+import gov.nysenate.openleg.legislation.member.FullMember;
 import gov.nysenate.openleg.legislation.member.dao.MemberService;
 import org.apache.commons.cli.CommandLine;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -43,10 +43,10 @@ import java.util.stream.Collectors;
 @Component
 public class FetchMemberImagesScript extends BaseScript {
 
-    private MemberService memberService;
-    private ObjectMapper objectMapper;
-    private String sourceCodeDir;
-    private String memberImgDir;
+    private final MemberService memberService;
+    private final ObjectMapper objectMapper;
+    private final String sourceCodeDir;
+    private final String memberImgDir;
 
     @Autowired
     public FetchMemberImagesScript(MemberService memberService, ObjectMapper objectMapper,
@@ -70,8 +70,7 @@ public class FetchMemberImagesScript extends BaseScript {
     public void execute(CommandLine opts) throws Exception {
         List<FullMember> updatedMembers = new ArrayList<>();
         List<FullMember> membersMissingImages = memberService.getAllFullMembers().stream()
-                .filter(m -> m.getImgName() == null || m.getImgName().isEmpty() || m.getImgName().equals("no_image.jpg"))
-                .collect(Collectors.toList());
+                .filter(m -> m.getPerson().imgName().equals("no_image.jpg")).toList();
 
         Map<Integer, MemberJsonFeedView> memberIdToJsonMember = getMembersFromJsonFeed();
 
@@ -91,7 +90,7 @@ public class FetchMemberImagesScript extends BaseScript {
         MemberJsonFeedView jsonFeedMember = memberIdToJsonMember.get(member.getMemberId());
         // Get image and write to file.
         InputStream in = new UrlResource(jsonFeedMember.getImg()).getInputStream();
-        FileIOUtils.writeToFile(in, memberImgDir + member.getSuggestedImageFileName());
+        FileIOUtils.writeToFile(in, memberImgDir + member.getPerson().getSuggestedImageFileName());
     }
 
     private void createMigration(List<FullMember> members) throws IOException {
@@ -104,10 +103,10 @@ public class FetchMemberImagesScript extends BaseScript {
         for (FullMember m : members) {
             builder.append("UPDATE public.person SET img_name = ");
             builder.append("'");
-            builder.append(m.getSuggestedImageFileName());
+            builder.append(m.getPerson().getSuggestedImageFileName());
             builder.append("' ");
             builder.append("WHERE id = ");
-            builder.append(m.getPersonId());
+            builder.append(m.getPerson().personId());
             builder.append(";");
             builder.append("\n\n");
         }
@@ -117,9 +116,8 @@ public class FetchMemberImagesScript extends BaseScript {
     }
 
     private Map<Integer, MemberJsonFeedView> getMembersFromJsonFeed() throws IOException {
-        HttpUtils httpUtils = new HttpUtils();
         String senatorJsonFeed = "https://www.nysenate.gov/senators.json";
-        String json = httpUtils.urlToString(senatorJsonFeed);
+        String json = HttpUtils.urlToString(senatorJsonFeed);
         MemberJsonFeedView[] jsonMembers = objectMapper.readValue(json, MemberJsonFeedView[].class);
         return Arrays.stream(jsonMembers)
                 .collect(Collectors.toMap(MemberJsonFeedView::getOpen_leg_id, Function.identity()));
