@@ -1,27 +1,26 @@
 package gov.nysenate.openleg.spotchecks.openleg.agenda;
 
 import com.google.common.collect.ImmutableList;
-import gov.nysenate.openleg.api.legislation.agenda.view.*;
 import gov.nysenate.openleg.api.ListView;
 import gov.nysenate.openleg.api.MapView;
+import gov.nysenate.openleg.api.legislation.agenda.view.*;
 import gov.nysenate.openleg.api.legislation.bill.view.BillIdView;
 import gov.nysenate.openleg.api.legislation.bill.view.BillVoteView;
 import gov.nysenate.openleg.api.legislation.committee.view.CommitteeIdView;
 import gov.nysenate.openleg.api.legislation.member.view.MemberView;
 import gov.nysenate.openleg.legislation.agenda.CommitteeAgendaAddendumId;
 import gov.nysenate.openleg.legislation.bill.BillId;
+import gov.nysenate.openleg.spotchecks.base.SpotCheckService;
+import gov.nysenate.openleg.spotchecks.base.SpotCheckUtils;
 import gov.nysenate.openleg.spotchecks.model.SpotCheckObservation;
 import gov.nysenate.openleg.spotchecks.model.SpotCheckRefType;
 import gov.nysenate.openleg.spotchecks.model.SpotCheckReferenceId;
-import gov.nysenate.openleg.spotchecks.base.SpotCheckService;
-import gov.nysenate.openleg.spotchecks.base.SpotCheckUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.spotchecks.model.SpotCheckMismatchType.*;
 
@@ -49,12 +48,12 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
 
     private void checkHasVotes(AgendaCommAddendumView content, AgendaCommAddendumView reference,
                                SpotCheckObservation<CommitteeAgendaAddendumId> observation) {
-        spotCheckUtils.checkObject(content.isHasVotes(), reference.isHasVotes(), observation, AGENDA_HAS_VOTES);
+        spotCheckUtils.checkObject(content.hasVotes(), reference.hasVotes(), observation, AGENDA_HAS_VOTES);
     }
 
     private String extractChair(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getMeeting())
-                .map(AgendaMeetingView::getChair)
+        return Optional.ofNullable(acav.meeting())
+                .map(AgendaMeetingView::chair)
                 .map(StringUtils::normalizeSpace)
                 .orElse(null);
     }
@@ -67,8 +66,8 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
     }
 
     private String extractLocation(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getMeeting())
-                .map(AgendaMeetingView::getLocation)
+        return Optional.ofNullable(acav.meeting())
+                .map(AgendaMeetingView::location)
                 .map(StringUtils::normalizeSpace)
                 .orElse(null);
     }
@@ -81,8 +80,8 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
     }
 
     private LocalDateTime extractMeetingDateTime(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getMeeting())
-                .map(AgendaMeetingView::getMeetingDateTime)
+        return Optional.ofNullable(acav.meeting())
+                .map(AgendaMeetingView::meetingDateTime)
                 .orElse(null);
     }
 
@@ -94,8 +93,8 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
     }
 
     private String extractNotes(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getMeeting())
-                .map(AgendaMeetingView::getNotes)
+        return Optional.ofNullable(acav.meeting())
+                .map(AgendaMeetingView::notes)
                 .map(StringUtils::normalizeSpace)
                 .orElse(null);
     }
@@ -108,19 +107,19 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
     }
 
     private String agendaItemViewStr(AgendaItemView aiv) {
-        String billIdStr = getBillIdStr(aiv.getBillId());
-        return billIdStr + " - " + StringUtils.normalizeSpace(aiv.getMessage());
+        String billIdStr = getBillIdStr(aiv.billId());
+        return billIdStr + " - " + StringUtils.normalizeSpace(aiv.message());
     }
 
-    private Comparator<AgendaItemView> agendaItemViewComparator =
-            Comparator.comparing(a -> Optional.ofNullable(a.getBillId()).map(BillIdView::toBillId).orElse(null));
+    private final Comparator<AgendaItemView> agendaItemViewComparator =
+            Comparator.comparing(a -> Optional.ofNullable(a.billId()).map(BillIdView::toBillId).orElse(null));
 
     private List<AgendaItemView> extractBillList(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getBills())
+        return Optional.ofNullable(acav.bills())
                 .map(ListView::getItems)
                 .orElseGet(ImmutableList::of).stream()
                 .sorted(agendaItemViewComparator)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void checkBillListing(AgendaCommAddendumView content, AgendaCommAddendumView reference,
@@ -131,15 +130,15 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
     }
 
     private List<AgendaAttendanceView> extractAttendList(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getVoteInfo())
-                .map(AgendaVoteView::getAttendanceList)
+        return Optional.ofNullable(acav.voteInfo())
+                .map(AgendaVoteView::attendanceList)
                 .map(ListView::getItems)
                 .orElse(null);
     }
 
     private String agendaAttendanceViewStr(AgendaAttendanceView av) {
-        String shortName = Optional.ofNullable(av.getMember()).map(MemberView::getShortName).orElse(null);
-        return av.getRank() + " - " + shortName + " - " + av.getParty() + " - " + av.getAttend();
+        String shortName = Optional.ofNullable(av.member()).map(MemberView::getShortName).orElse(null);
+        return av.party() + " - " + shortName + " - " + av.party() + " - " + av.attend();
     }
 
     private void checkAttendanceList(AgendaCommAddendumView content, AgendaCommAddendumView reference,
@@ -152,23 +151,23 @@ public class OpenlegAgendaCheckService implements SpotCheckService<CommitteeAgen
 
 
     private List<AgendaVoteBillView> extractVotes(AgendaCommAddendumView acav) {
-        return Optional.ofNullable(acav.getVoteInfo())
-                .map(AgendaVoteView::getVotesList)
+        return Optional.ofNullable(acav.voteInfo())
+                .map(AgendaVoteView::votesList)
                 .map(ListView::getItems)
                 .orElse(null);
     }
 
     private StringBuilder getVoteStr(AgendaVoteBillView avb) {
         StringBuilder sBuilder = new StringBuilder();
-        Optional<BillVoteView> voteOpt = Optional.ofNullable(avb.getVote());
+        Optional<BillVoteView> voteOpt = Optional.ofNullable(avb.vote());
         sBuilder.append(voteOpt.map(BillVoteView::getCommittee).map(CommitteeIdView::getName).orElse(null))
                 .append(" ")
                 .append(voteOpt.map(BillVoteView::getVoteDate).orElse(null)).append(" ")
-                .append(getBillIdStr(avb.getBill())).append(" ")
-                .append(avb.getAction());
-        if (avb.getReferCommittee() != null) {
+                .append(getBillIdStr(avb.bill())).append(" ")
+                .append(avb.action());
+        if (avb.referCommittee() != null) {
             sBuilder.append(" -> ")
-                    .append(avb.getReferCommittee().getName());
+                    .append(avb.referCommittee().getName());
         }
         Map<String, ListView<MemberView>> memberVoteMap = voteOpt.map(BillVoteView::getMemberVotes)
                 .map(MapView::getItems)
