@@ -5,18 +5,18 @@ import gov.nysenate.openleg.legislation.law.LawDocument;
 import gov.nysenate.openleg.legislation.law.LawInfo;
 import gov.nysenate.openleg.legislation.law.LawTree;
 import gov.nysenate.openleg.legislation.law.LawTreeNode;
-import gov.nysenate.openleg.spotchecks.sensite.bill.LawSpotCheckId;
-import gov.nysenate.openleg.spotchecks.model.SpotCheckMismatch;
-import gov.nysenate.openleg.spotchecks.model.SpotCheckObservation;
-import gov.nysenate.openleg.spotchecks.model.SpotCheckRefType;
-import gov.nysenate.openleg.spotchecks.model.SpotCheckReport;
-import gov.nysenate.openleg.spotchecks.sensite.SenateSiteDump;
-import gov.nysenate.openleg.spotchecks.sensite.SenateSiteDumpFragment;
 import gov.nysenate.openleg.legislation.law.dao.LawDataService;
 import gov.nysenate.openleg.legislation.law.dao.LawDocumentNotFoundEx;
 import gov.nysenate.openleg.legislation.law.dao.LawTreeNotFoundEx;
 import gov.nysenate.openleg.spotchecks.base.SpotCheckUtils;
+import gov.nysenate.openleg.spotchecks.model.SpotCheckMismatch;
+import gov.nysenate.openleg.spotchecks.model.SpotCheckObservation;
+import gov.nysenate.openleg.spotchecks.model.SpotCheckRefType;
+import gov.nysenate.openleg.spotchecks.model.SpotCheckReport;
 import gov.nysenate.openleg.spotchecks.sensite.BaseSenateSiteReportService;
+import gov.nysenate.openleg.spotchecks.sensite.SenateSiteDump;
+import gov.nysenate.openleg.spotchecks.sensite.SenateSiteDumpFragment;
+import gov.nysenate.openleg.spotchecks.sensite.bill.LawSpotCheckId;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -25,7 +25,6 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static gov.nysenate.openleg.spotchecks.model.SpotCheckMismatchType.*;
 
@@ -116,7 +115,7 @@ public class SenateSiteLawReportService extends BaseSenateSiteReportService<LawS
             }
         }
         // Do not do a full law id check if only a single law chapter was included in the dump
-        if (dump.getDumpId().getFragmentCount() > 1) {
+        if (dump.getDumpId().fragmentCount() > 1) {
             checkLawIds(refLawIds, report);
         }
     }
@@ -128,7 +127,7 @@ public class SenateSiteLawReportService extends BaseSenateSiteReportService<LawS
         );
         List<String> dataLawIds = lawDataService.getLawInfos().stream()
                 .map(LawInfo::getLawId)
-                .collect(Collectors.toList());
+                .toList();
         spotCheckUtils.checkCollection(dataLawIds, refLawIds, obs, LAW_IDS, String::toString, "\n", true);
         report.addObservation(obs);
     }
