@@ -7,26 +7,24 @@ import gov.nysenate.openleg.notifications.slack.model.SlackAddress;
 import gov.nysenate.openleg.notifications.slack.model.SlackAttachment;
 import gov.nysenate.openleg.notifications.slack.model.SlackField;
 import gov.nysenate.openleg.notifications.slack.model.SlackMessage;
-import gov.nysenate.openleg.common.util.DebugUtils;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Category(SillyTest.class)
 public class SlackChatServiceTest extends BaseTests {
+    private static final String testMessageText = "This is a test message from ";
+    // Template for printing line info.  Inputs are class name, method name, and line number
+    private static final String lineInfoTemplate = "%s#%s:%d";
+    private static final List<String> slackers =
+            List.of("slacker_A", "slacker_B", "", "   ");
 
     @Autowired
-    SlackChatService slackChatService;
+    private SlackChatService slackChatService;
 
-    private static final String testMessageText = "This is a test message from ";
-
-    private static final ImmutableList<String> slackers =
-            ImmutableList.of("slacker_A", "slacker_B", "", "   ");
-
-    private static final ImmutableList<SlackAddress> addresses =
+    private static final List<SlackAddress> addresses =
             ImmutableList.<SlackAddress>builder()
 //                    .addAll(getAddresses("openleg-notices", slackers))
                     .add(new SlackAddress("not-a-channel", "not_a_slacker"))
@@ -66,9 +64,8 @@ public class SlackChatServiceTest extends BaseTests {
      */
     @Test
     public void sendMessageTest() {
-        slackChatService.sendMessage(testMessageText + DebugUtils.getLineInfo());
+        slackChatService.sendMessage(testMessageText + getStackInfo());
     }
-
 
     /**
      * Should post a message to the default channel configured 
@@ -77,16 +74,16 @@ public class SlackChatServiceTest extends BaseTests {
      */
     @Test
     public void sendMentionMessageTest() {
-        slackChatService.sendMessage(testMessageText + DebugUtils.getLineInfo(), slackers);
+        slackChatService.sendMessage(testMessageText + getStackInfo(), slackers);
     }
 
     /**
-     * Should post a message with all of the attributes of {@link #stockTestMessage}
+     * Should post a message with all the attributes of {@link #stockTestMessage}
      */
     @Test
     public void sendCustomMessageTest() {
         SlackMessage message = new SlackMessage(stockTestMessage);
-        message.setText(testMessageText + DebugUtils.getLineInfo());
+        message.setText(testMessageText + getStackInfo());
         slackChatService.sendMessage(message);
     }
 
@@ -96,7 +93,7 @@ public class SlackChatServiceTest extends BaseTests {
     @Test
     public void sendRoutedMessageTest() {
         SlackMessage message = new SlackMessage(stockTestMessage);
-        message.setText(testMessageText + DebugUtils.getLineInfo());
+        message.setText(testMessageText + getStackInfo());
         slackChatService.sendMessage(message, addresses);
     }
 
@@ -105,7 +102,13 @@ public class SlackChatServiceTest extends BaseTests {
     private static List<SlackAddress> getAddresses(String channel, List<String> slackers) {
         return slackers.stream()
                 .map(slacker -> new SlackAddress(channel, slacker))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private static String getStackInfo() {
+        StackTraceElement frame = Thread.currentThread().getStackTrace()[1];
+        return String.format(lineInfoTemplate,
+                frame.getClassName(), frame.getMethodName(), frame.getLineNumber());
     }
 }
 
